fix(Boards) #MAG-289: aligns buttons in boards (#93)

--- a/src/main/resources/public/sass/global/components/containers/_boards.scss
+++ b/src/main/resources/public/sass/global/components/containers/_boards.scss
@@ -88,7 +88,6 @@
     &-folder-button {
       display: flex;
       align-self: center;
-      width: 80%;
 
       a {
         border: solid $magneto-primary 1px;
